@@ -392,6 +392,10 @@ typedef enum select_type_plugin_info {
 	CR_CPU_MEMORY,    /* CPU and Memory are CRs */
 } select_type_plugin_info_t ;
 
+/* Values for slurm_ctl_conf.task_plugin_param */
+#define TASK_PARAM_NONE    0x0000
+#define TASK_PARAM_CPUSETS 0x0001
+
 /*****************************************************************************\
  *	PROTOCOL DATA STRUCTURE DEFINITIONS
 \*****************************************************************************/
@@ -874,6 +878,7 @@ typedef struct slurm_ctl_conf {
 	char *switch_type;	/* switch or interconnect type */
 	char *task_epilog;	/* pathname of task launch epilog */
 	char *task_plugin;	/* task launch plugin */
+	uint16_t task_plugin_param;	/* see TASK_PARAM_* */
 	char *task_prolog;	/* pathname of task launch prolog */
 	char *tmp_fs;		/* pathname of temporary file system */
 	uint16_t wait_time;	/* default job --wait time */
