@@ -2116,6 +2116,7 @@ _pack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t * build_ptr, Buf buffer)
 	packstr(build_ptr->task_epilog, buffer);
 	packstr(build_ptr->task_prolog, buffer);
 	packstr(build_ptr->task_plugin, buffer);
+	pack16(build_ptr->task_plugin_param, buffer);
 	packstr(build_ptr->tmp_fs, buffer);
 	pack16((uint16_t)build_ptr->wait_time, buffer);
 	packstr(build_ptr->job_credential_private_key, buffer);
@@ -2212,6 +2213,7 @@ _unpack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t **
 	safe_unpackstr_xmalloc(&build_ptr->task_epilog, &uint16_tmp, buffer);
 	safe_unpackstr_xmalloc(&build_ptr->task_prolog, &uint16_tmp, buffer);
 	safe_unpackstr_xmalloc(&build_ptr->task_plugin, &uint16_tmp, buffer);
+	safe_unpack16(&build_ptr->task_plugin_param, buffer);
 	safe_unpackstr_xmalloc(&build_ptr->tmp_fs, &uint16_tmp, buffer);
 	safe_unpack16(&build_ptr->wait_time, buffer);
 	safe_unpackstr_xmalloc(&build_ptr->job_credential_private_key,
