@@ -7,6 +7,7 @@ documents those changes that are of interest to users and admins.
  -- Add ability to change a node's features via "scontrol update". NOTE: 
     Update slurm.conf also to preserve changes over slurmctld restart or 
     reconfig.
+ -- Added new slurm.conf parameter TaskPluginParam.
 
 * Changes in SLURM 1.2.0-pre9
 =============================
